# time

./: .gitignore  README.md
.claude/skills/android-on-device-testing/: SKILL.md
.claude/skills/direct-vps-deploy/: SKILL.md
.claude/skills/flutter-fastapi-localfirst/: SKILL.md
.claude/skills/flutter-web-e2e-testing/: SKILL.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  deps.py  email_util.py  main.py  models.py  schemas.py  security.py
backend/app/routes/: auth.py  entries.py  settings.py
backend/scripts/: manage.py  seed_demo_day.py
backend/tests/: conftest.py  test_auth.py  test_entries.py
backend/time_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deploy/: bootstrap-remote.sh  deploy.sh  time-api.service
deploy/nginx/: time.sovereinia.org.conf
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/integration_test/: app_test.dart  donut_test.dart  features_test.dart  forgot_test.dart  live_test.dart
frontend/lib/: main.dart
frontend/lib/l10n/: app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_localizations.dart  app_localizations_de.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_fr.dart  app_localizations_pt.dart  app_pt.arb
frontend/lib/src/: theme.dart
frontend/test/: categories_test.dart  empty_state_render_test.dart  entries_logic_test.dart  theme_picker_test.dart
frontend/test_driver/: integration_test.dart
frontend/tool/: make_icon.py  web_smoke.py  web_smoke.sh
frontend/web/: index.html  manifest.json
(+28 files in other folders)
